# vibegames

./: .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  compose.yaml  readme.md
.github/workflows/: api-check.yml
api/: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  alembic.ini  pyproject.toml  run_mypy.sh
api/alembic/: env.py
api/alembic/versions/: 684f2e4cbdc5_add_lock_column.py  b882cb7b3464_initial_migration.py
api/app/: __init__.py  __main__.py  auth.py  database.py  db_migrations.py  g4f.py  github.py  models.py  project_naming.py  routes.py  settings.py  subdomain_handler.py  thumbs.py  utils.py
api/static/: index.html
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  theme.ts
frontend/src/components/: AppBar.tsx  ClearAdorment.tsx  GameCard.tsx  GameGrid.tsx  GameThumbnail.tsx  GameView.tsx  Sidebar.tsx
frontend/src/types/: api.ts  game.ts
